[package]
name = "webgl"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
  'HtmlCanvasElement',
  'KeyboardEvent',
  'MouseEvent',
  'Node',
  'PointerEvent',
  'Screen',
  'TextMetrics',
  'WebGlRenderingContext', 'WebGlShaderPrecisionFormat', 'WebGlProgram', 'WebGlShader',
  "WebGl2RenderingContext",
  'WebGlUniformLocation', 'WebGlBuffer', 'WebGlTexture', 'WheelEvent'
] }
